--- a/.env
+++ b/.env
@@ -2,3 +2,8 @@
 POSTGRES_USER=ejfernandez
 POSTGRES_PASSWORD=890IOPkl;<>?
 POSTGRES_DB=test_database
+POSTGRES_IP_PORT=localhost:5432
+
+# PGAdmin variables
+PGADMIN_DEFAULT_EMAIL=edwardjamesf@gmail.com
+PGADMIN_DEFAULT_PASSWORD=#YOLOswag4jesus
