Change postgres IP to match raspberry pi environment

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 POSTGRES_USER=ejfernandez
 POSTGRES_PASSWORD=890IOPkl;<>?
 POSTGRES_DB=test_database
-POSTGRES_IP_PORT=localhost:5432
+POSTGRES_IP_PORT=172.17.0.1:5432
 
 # PGAdmin variables
 PGADMIN_DEFAULT_EMAIL=edwardjamesf@gmail.com
