--- a/.env-sample
+++ b/.env-sample
@@ -1,3 +1,4 @@
+# Copy this file and rename as .env
 # Add in credentials for the following environment variables:
 # POSTGRES_USER
 # POSTGRES_PASSWORD
