--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -1,17 +1,13 @@
 FROM node:latest
 
-WORKDIR /code
+WORKDIR /react-vite-app
 
-COPY package.json .
+COPY package.json package-lock.json ./
 
 RUN npm install
 
-RUN npm i -g serve
-
-COPY . .
-
-RUN npm run build
+COPY . ./
 
 EXPOSE 4000
 
-CMD [ "serve", "-s", "dist"]
+CMD ["npm", "run", "dev"]
