--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
     "@mui/x-date-pickers": "^7.13.0",
     "dayjs": "^1.11.12",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
