--- a/.env-sample
+++ b/.env-sample
@@ -14,3 +14,6 @@ POSTGRES_IP_PORT=pgdb:5432
 # PGAdmin variables
 PGADMIN_DEFAULT_EMAIL=
 PGADMIN_DEFAULT_PASSWORD=
+
+# Vite variables
+VITE_TARGET_API=
