--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,10 @@
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
     "@fontsource/roboto": "^5.1.0",
+    "@mui/base": "^5.0.0-beta.63",
     "@mui/icons-material": "^6.1.8",
-    "@mui/material": "^6.1.8",
-    "@mui/x-data-grid": "^7.22.3",
+    "@mui/material": "^6.1.9",
+    "@mui/x-data-grid": "^7.23.0",
     "@mui/x-date-pickers": "^7.22.3",
     "dayjs": "^1.11.13",
     "react": "^18.3.1",
