--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:postgresql://192.168.86.241:5432/test_database
-spring.datasource.username = ejfernandez
-spring.datasource.password = 890IOPkl;<>?
+spring.datasource.url = jdbc:postgresql://ep-round-breeze-a67s03p0.us-west-2.aws.neon.tech/fews?sslmode=require
+spring.datasource.username = fews_owner
+spring.datasource.password = 6yXRPgNkqh3U
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgresPlusDialect
