--- a/compose.yml
+++ b/compose.yml
@@ -44,7 +44,7 @@ services:
     restart: unless-stopped
     ports:
       - "4000:4000"
-    depends_on:
-      db:
-        condition: service_healthy
-        restart: true
+#    depends_on:
+#      db:
+#        condition: service_healthy
+#        restart: true
