--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@mui/x-data-grid": "^7.23.0",
     "@mui/x-date-pickers": "^7.22.3",
     "dayjs": "^1.11.13",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.1"
