--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:postgresql://localhost:5432/fews
+spring.datasource.url = jdbc:postgresql://192.168.86.241:5432/fews
 spring.datasource.username = postgres
 spring.datasource.password = 890IOPkl;<>?
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgresPlusDialect
